--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
     <!--  Estilo Custom -->
     <link rel="stylesheet" th:href="@{/css/home.css}">
-
+    <!-- FOOTER -->
+    <link rel="stylesheet" th:href="@{/css/footer.css}">
     <title>Trucoteca</title>
 </head>
 <body>
@@ -23,10 +24,16 @@
 
         <article id="reference">
             <a class="text-decoration-none text-white" target="_blank" rel="noopener" th:href="@{/perfil(id=${usuario.id})}">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
-                    <circle cx="12" cy="8" r="4"></circle>
-                    <path d="M12 14c-4.42 0-8 2.24-8 5v1h16v-1c0-2.76-3.58-5-8-5z"></path>
-                </svg>
+                <div th:if="${usuario.fotoPerfil == null || usuario.fotoPerfil.id == 1}">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
+                        <circle cx="12" cy="8" r="4"></circle>
+                        <path d="M12 14c-4.42 0-8 2.24-8 5v1h16v-1c0-2.76-3.58-5-8-5z"></path>
+                    </svg>
+                </div>
+
+                <div th:if="${usuario.fotoPerfil != null && usuario.fotoPerfil.id != 1}">
+                    <img th:src="@{'/img/fotos-perfil/' + ${usuario.fotoPerfil.imagen}}" width="24" height="24" alt="Foto de perfil">
+                </div>
             </a>
             <a href="" class="text-decoration-none text-white fs-5" target="_blank" rel="noopener">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor">
@@ -38,49 +45,51 @@
     </div>
 </header>
 
-<div class="marquee">
-    <ul>
-        <li th:each="usuario : ${usuariosSugeridos}">
-            <div class="sugerencia-item">
-                <p class="text-white" th:text="${usuario.nombreUsuario}"></p>
-                <form th:action="@{/agregar-amigo}" method="post">
-                    <input type="hidden" name="idAmigo" th:value="${usuario.id}">
-                    <button type="submit" class="btn btn-primary btn-sm">Agregar</button>
-                </form>
-            </div>
-        </li>
-    </ul>
+<div class="tableta">
+    <a th:href="@{/amigos}">
+        <div class="marquee">
+            <ul class="marquee-content" >
+                <li th:each="usuario : ${usuariosSugeridos}">
+                    <p style="color: black;" th:text="${usuario.nombreUsuario}"></p>
+                    <i class="fab fa-github">
+                        <img th:src="@{/img/fotos-perfil/{fotoPerfil}(fotoPerfil=${usuario.urlFotoPerfil})}" alt="Foto de perfil" class="foto-perfil" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover;">
+                    </i>
+                </li>
+            </ul>
+        </div>
+    </a>
+
+    <main>
+        <figure style="width: 100%; height: 219px; background-size: cover; background-position: center;">
+            <figcaption>Truco</figcaption>
+            <form th:action="@{/menuJuego}" method="get" >
+                <!-- Campo oculto para pasar el usuario -->
+                <input type="hidden" name="idUsuario" th:value="${usuario.id}">
+
+                <button type="submit" style="border: none; background: none; padding: 0; cursor: pointer;">
+                    <img th:src="@{/img/truco-home.png}" alt="Ir al juego de truco" style="width: 100%; height: 220px; background-size: cover; background-position: center;">
+                </button>
+            </form>
+        </figure>
+        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/uno-home.jpg} + ')'">
+            <figcaption>UNO</figcaption>
+        </figure>
+        <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/chinchon.jpg} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
+            <figcaption>Chin-Chon</figcaption>
+        </figure>
+        <figure style="background-image: url('https://images.unsplash.com/photo-1593414220166-085caeae0382?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=751&q=80')">
+            <figcaption>City-01</figcaption>
+        </figure>
+        <figure style="background-image: url('https://images.unsplash.com/photo-1593414220166-085caeae0382?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=751&q=80')">
+            <figcaption>City-01</figcaption>
+        </figure>
+        <figure style="background-image: url('https://images.unsplash.com/photo-1593414220166-085caeae0382?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=751&q=80')">
+            <figcaption>City-01</figcaption>
+        </figure>
+        <!-- Repite las demás figuras aquí -->
+    </main>
 </div>
 
-<main>
-    <figure style="width: 100%; height: 219px; background-size: cover; background-position: center;">
-        <figcaption>Truco</figcaption>
-        <form th:action="@{/menuJuego}" method="get" >
-            <!-- Campo oculto para pasar el usuario -->
-            <input type="hidden" name="idUsuario" th:value="${usuario.id}">
-
-            <button type="submit" style="border: none; background: none; padding: 0; cursor: pointer;">
-                <img th:src="@{/img/truco-home.png}" alt="Ir al juego de truco" style="width: 100%; height: 220px; background-size: cover; background-position: center;">
-            </button>
-        </form>
-    </figure>
-    <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/uno-home.jpg} + ')'">
-        <figcaption>UNO</figcaption>
-    </figure>
-    <figure th:style="'width: 100%; height: 219px; background-size: cover; background-position: center; background-image: url(' + @{/img/chinchon.jpg} + ')'"> <!-- MARCA ERROR PERO FUNCIONA BIEN -->
-        <figcaption>Chin-Chon</figcaption>
-    </figure>
-    <figure style="background-image: url('https://images.unsplash.com/photo-1593414220166-085caeae0382?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=751&q=80')">
-        <figcaption>City-01</figcaption>
-    </figure>
-    <figure style="background-image: url('https://images.unsplash.com/photo-1593414220166-085caeae0382?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=751&q=80')">
-        <figcaption>City-01</figcaption>
-    </figure>
-    <figure style="background-image: url('https://images.unsplash.com/photo-1593414220166-085caeae0382?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=751&q=80')">
-        <figcaption>City-01</figcaption>
-    </figure>
-    <!-- Repite las demás figuras aquí -->
-</main>
 
 <footer class="col-12 py-4 d-flex flex-column gap-2">
     <div class="footerWrapper col-10 mx-auto d-flex align-items-center text-white">
@@ -102,24 +111,6 @@
     <hr class="col-10 mx-auto text-white"/>
     <p class="py-1 text-center fs-5 text-white">&copy; 2024 UNLaM. Todos los derechos reservados.</p>
 </footer>
-
-    <div class="amigos">
-        <a th:href="@{/amigos}">
-            <h1>Amigos</h1>
-        </a>
-        <div class="d-flex flex-column align-items-center tablaAmigos" th:if="${amigos == null || amigos.size() == 0}">
-            <p class="text-white fs-5">Te recomendamos estos amigos</p>
-            <div class="sugerencias-container">
-                <div class="sugerencia-item" th:each="usuario : ${usuariosSugeridos}">
-                    <p class="text-white" th:text="${usuario.nombreUsuario}"></p>
-                    <form th:action="@{/agregar-amigo}" method="post">
-                        <input type="hidden" name="idAmigo" th:value="${usuario.id}">
-                        <button type="submit" class="btn btn-primary btn-sm">Agregar</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
 
 <!-- SCRIPT PARA CARROUSEL -->
 <script>
