--- a/src/main/webapp/resources/core/css/home.css
+++ b/src/main/webapp/resources/core/css/home.css
@@ -17,14 +17,28 @@
 	touch-action: none;
 }
 
+.header-estatico {
+	background: #EEE;
+	height: 200px;
+	width: 100%;
+	position: static;
+	top: 0;
+}
+
 /* ESTILOS GENERALES */
 body {
 	margin: 0;
 	padding: 0;
-	background-color: #EEE;
+	background-image: url('https://png.pngtree.com/background/20230610/original/pngtree-city-illustration-background-vector-picture-image_3046717.jpg');
+	background-size: cover;
 	font-family: "Open Sans", sans-serif;
 	box-sizing: border-box;
 	cursor: default;
+
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
 }
 
 *, *:before, *:after {
@@ -72,14 +86,19 @@ header > div {
 	margin-left: 1rem;
 }
 
+.tableta {
+	width: 75%;
+	background: #EEE;
+	align-self: center;
+}
+
 /* CARROUSEL */
 :root {
-	--marquee-width: 100%;
+	--marquee-width: 55%;
 	--marquee-height: 20vh;
-	/* --marquee-elements: 12; */ /* definidos con JavaScript */
 	--marquee-elements-displayed: 5;
 	--marquee-element-width: calc(var(--marquee-width) / var(--marquee-elements-displayed));
-	--marquee-animation-duration: calc(var(--marquee-elements) * 3s);
+	--marquee-animation-duration: calc(var(--marquee-elements) * 7s);
 }
 
 .marquee {
@@ -90,7 +109,14 @@ header > div {
 	overflow: hidden;
 	position: relative;
 	margin-bottom: 10px;
+	margin-left: 22.5%;
+	/* Ajuste del difuminado */
+	mask-image: linear-gradient(to left, black 50%, transparent 10%);  /* Gradiente de derecha a izquierda */
+	-webkit-mask-image: linear-gradient(to left, black 100%, transparent 100%);
+	backdrop-filter: blur(8px);
+	-webkit-backdrop-filter: blur(8px);
 }
+
 .marquee:before, .marquee:after {
 	position: absolute;
 	top: 0;
@@ -99,40 +125,51 @@ header > div {
 	content: "";
 	z-index: 1;
 }
+
 .marquee:before {
-	left: 0;
-	background: linear-gradient(to right, transparent 0%, transparent 100%);
-}
-.marquee:after {
 	right: 0;
-	background: linear-gradient(to left, transparent 0%, transparent 100%);
+	background: linear-gradient(to left, #EEE 40%, transparent 100%);
 }
+
+.marquee:after {
+	left: 0;
+	background: linear-gradient(to right, #EEE 40%, transparent 100%);
+}
+
 .marquee-content {
 	list-style: none;
 	height: 100%;
 	display: flex;
 	animation: scrolling var(--marquee-animation-duration) linear infinite;
+	padding: 0;
+	margin: 0;
 }
 
 @keyframes scrolling {
-	0% { transform: translateX(0); }
-	100% { transform: translateX(calc(-1 * var(--marquee-element-width) * var(--marquee-elements))); }
-}
-.marquee-content li {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	/* text-align: center; */
-	flex-shrink: 0;
-	width: var(--marquee-element-width);
-	max-height: 100%;
-	font-size: calc(var(--marquee-height)*3/4); /* 5rem; */
-	white-space: nowrap;
+	0% { transform: translateX(calc(100%)); } /* Inicia desde la derecha */
+	100% { transform: translateX(calc(-1 * var(--marquee-element-width) * var(--marquee-elements-displayed))); } /* Desplazamiento hacia la izquierda */
 }
 
-.marquee-content li img {
-	width: 100%;
-	border: 2px solid #eee;
+.marquee-content li {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	flex-shrink: 0;
+	max-height: 100%;
+	margin: 0; /* Eliminar cualquier margen entre los elementos */
+}
+
+.marquee-content p {
+	font-size: large;
+	text-decoration: none;
+}
+
+.marquee-content li p {
+	margin: 0; /* Eliminar márgenes para evitar espacios entre los elementos */
+	padding: 0;
+	font-size: 1rem; /* Ajusta el tamaño de texto según lo necesites */
+	color: black;
 }
 
 @media (max-width: 600px) {
