--- a/src/main/webapp/resources/core/css/home.css
+++ b/src/main/webapp/resources/core/css/home.css
@@ -1,4 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@300;400;500&display=swap');
+
+
+/* Estilo para el título */
+h1, h2, h3 {
+	font-family: 'Poppins', sans-serif;
+	font-weight: 600;
+}
+
+p, span {
+	font-family: "Parkinsans", sans-serif;
+	font-optical-sizing: auto;
+	font-weight: bold;
+	font-style: normal;
+}
 
 /* HEADER BORROSO */
 #blurry-filter {
@@ -17,20 +32,13 @@
 	touch-action: none;
 }
 
-.header-estatico {
-	background: #EEE;
-	height: 200px;
-	width: 100%;
-	position: static;
-	top: 0;
-}
-
 /* ESTILOS GENERALES */
 body {
 	margin: 0;
 	padding: 0;
-	background-image: url('https://png.pngtree.com/background/20230610/original/pngtree-city-illustration-background-vector-picture-image_3046717.jpg');
-	background-size: cover;
+	background: #EEE;
+	/*background-image: url('https://png.pngtree.com/background/20230610/original/pngtree-city-illustration-background-vector-picture-image_3046717.jpg');
+	background-size: cover;*/
 	font-family: "Open Sans", sans-serif;
 	box-sizing: border-box;
 	cursor: default;
@@ -52,7 +60,12 @@ header {
 	position: sticky;
 	top: 0;
 	z-index: 1;
+	display: flex;
+	justify-content: center; /* Centra el contenido horizontalmente */
+	align-items: center; /* Centra el contenido verticalmente */
+
 }
+
 header > div {
 	width: calc(100% - 3rem);
 	max-width: 800px;
@@ -60,15 +73,30 @@ header > div {
 	margin: 0 auto;
 	display: flex;
 	align-items: center;
+	justify-content: space-between; /* Mantiene el espacio entre los elementos */
+	position: relative;
+}
+
+#titulo-principal {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	font-family: "Kumar One Outline", system-ui;
+	font-size: 60px;
+	text-align: center; /* Asegura que el texto esté centrado dentro de su contenedor */
+	flex-grow: 1; /* Hace que el título ocupe el espacio disponible */
 }
 
 #title {
 	width: 100%;
 }
+
 #title .parent {
 	line-height: 1em;
 	color: #666;
 }
+
 #title .name {
 	font-size: 2em;
 	font-weight: bold;
@@ -79,17 +107,20 @@ header > div {
 #reference {
 	display: flex;
 }
+
 #reference > a {
 	color: #444;
 }
+
 #reference > a + a {
 	margin-left: 1rem;
 }
-
 .tableta {
 	width: 75%;
 	background: #EEE;
 	align-self: center;
+	text-align: center;
+	margin-top: 20px;
 }
 
 /* CARROUSEL */
@@ -190,6 +221,7 @@ main {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 	grid-gap: 1.5rem;
+	padding-bottom: 30px;
 }
 
 main > article {
@@ -204,10 +236,12 @@ main > figure {
 	background-size: cover;
 	border-radius: 1rem;
 	transition: all 100ms ease-out;
+	position: relative;
 }
 main > figure:hover {
 	box-shadow: 0 16px 16px -4px rgba(0, 0, 0, 0.3);
 	transform: scale(1.02);
+	cursor: pointer;
 }
 main > figure:after {
 	content: "";
@@ -243,10 +277,19 @@ main > figure > form > button > img {
 }
 
 main > figure > figcaption {
-	margin: 1rem;
-	color: #FFF;
 	font-size: 1.25em;
 	position: absolute;
+	top: 0;
+	left: 0;
+	font-family: "Parkinsans", sans-serif;
+	font-weight: 400;
+	line-height: 1.6;
+	color: #EEE;
+	padding: 10px 15px;
+	background-color: rgba(0, 0, 0, 0.7);
+	border-bottom-right-radius: 15px;
+	border-top-left-radius: 15px;
+
 }
 
 #folders {
@@ -267,8 +310,68 @@ main > figure > figcaption {
 	transform: scale(1.02);
 }
 
+/* FOOTER */
 footer {
+	background-color: #edf2f7; /* Similar to bg-blueGray-200 */
+	padding-top: 2rem;
+	padding-bottom: 1.5rem;
 	width: 100%;
-	height: 8rem;
 }
 
+footer h4 {
+	font-size: 1.875rem;
+	font-weight: 600;
+	color: #4a5568; /* blueGray-700 */
+}
+
+footer h5 {
+	font-size: 1.125rem;
+	margin-top: 0;
+	margin-bottom: 0.5rem;
+	color: #718096; /* blueGray-600 */
+}
+
+.social-buttons .social-button {
+	background-color: #fff;
+	color: #4299e1; /* lightBlue-400 */
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	font-weight: normal;
+	height: 2.5rem;
+	width: 2.5rem;
+
+	border-radius: 50%;
+	outline: none;
+	margin-right: 0.5rem;
+	cursor: pointer;
+}
+
+.social-buttons .twitter { color: #1DA1F2; }
+.social-buttons .facebook { color: #1877F2; }
+.social-buttons .dribbble { color: #EA4C89; }
+.social-buttons .github { color: #171515; }
+
+footer .link {
+	color: #718096; /* blueGray-600 */
+	font-weight: 600;
+	padding-bottom: 0.5rem;
+	font-size: 0.875rem;
+	text-decoration: none;
+}
+
+footer .link:hover {
+	color: #2d3748; /* blueGray-800 */
+}
+
+footer hr {
+	margin-top: 1.5rem;
+	margin-bottom: 1.5rem;
+	border-color: #cbd5e0; /* blueGray-300 */
+}
+
+footer .text-sm {
+	font-size: 0.875rem;
+}
+
+footer .font-semibold {
+	font-weight: 600;
+}
