--- a/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/partida-truco.html
@@ -37,7 +37,7 @@
                  th:if="${partidaIniciada}">
                 <!-- NORMALES -->
                 <div class="d-flex gap-1"
-                     th:if="${mostrarRespuestasJ1 || (leTocaResponder != null && leTocaResponder.getNumero() == 1)}">
+                     th:if="${mostrarRespuestasJ1 != null && mostrarRespuestasJ1.numero.equals(1)}">
                     <a class="btn btn-primary"
                        th:href="@{/accion(mano=${mano.getId()}, accion=2, jugador=1)}">Envido
                     </a>
@@ -53,7 +53,7 @@
                 </div>
                 <!-- RESPUESTAS TRUCO -->
                 <div id="respuestas1"
-                     th:if="${mostrarRespuestasEnvidoJ1 || (leTocaResponder != null && leTocaResponder.getNumero() == 1)}">
+                     th:if="${mostrarRespuestasTrucoJ1 != null && mostrarRespuestasTrucoJ1.numero.equals(1)}">
                     <a class="btn btn-primary"
                        th:href="@{/respuesta(mano=${mano.getId()}, respuesta=1, jugador=1, accion=${accionAResponder})}">Quiero
                     </a>
@@ -72,7 +72,7 @@
                 </div>
                 <!-- RESPUESTAS ENVIDO -->
                 <div id="respuestas"
-                     th:if="${mostrarRespuestasTrucoJ1 || (leTocaResponder != null && leTocaResponder.getNumero() == 1)}">
+                     th:if="${mostrarRespuestasEnvidoJ1 != null && mostrarRespuestasEnvidoJ1.numero.equals(1)}">
                     <a class="btn btn-primary"
                        th:href="@{/respuesta(mano=${mano.getId()}, respuesta=1, jugador=1, accion=${accionAResponder})}">Quiero
                     </a>
@@ -111,7 +111,7 @@
 
         <!-- CARTAS TIRADAS -->
         <div id="cartas-en-juego" class="d-flex flex-wrap order-1 bor2">
-            <div th:if="${partidaIniciada != null && !partidaIniciada}" class="col-4 bor1">
+            <div th:if="${partidaIniciada != null && partidaIniciada}" class="col-4 bor1">
                 <a th:href="@{/comenzar-truco(idPartida= ${idPartida})}" th:if="${ganador == null}" class="w-100">
                     <img class="mazo bor2" th:src="@{/img/cartas-truco/mazo2.png}" alt="Mazo de Cartas">
                 </a>
@@ -119,8 +119,7 @@
                     <img class="mazo bor1" th:src="@{/img/cartas-truco/mazo2.png}" alt="Mazo de Cartas">
                 </a>
             </div>
-
-            <div class="col-4 d-flex flex-column flex-wrap gap-1" th:if="${partidaIniciada != null && partidaIniciada}">
+            <div class="col-4 d-flex flex-column flex-wrap gap-1" th:if="${mano != null}">
                 <div class="d-flex justify-content-center gap-2" th:if="${cartasTiradasJ1 != null}">
                     <img th:each="carta : ${cartasTiradasJ1}" th:src="@{${carta.img}}" alt="Carta" class="cartaTirada"/>
                 </div>
@@ -160,7 +159,7 @@
                  th:if="${partidaIniciada}">
                 <!-- NORMALES -->
                 <div class="d-flex gap-1"
-                     th:if="${mostrarRespuestasJ2 || (leTocaResponder != null && leTocaResponder.getNumero() == 2)}">
+                     th:if="${mostrarRespuestasJ2 != null && mostrarRespuestasJ2.numero.equals(2)}">
                     <a class="btn btn-primary"
                        th:href="@{/accion(mano=${mano.getId()}, accion=2, jugador=2)}">Envido
                     </a>
@@ -175,7 +174,7 @@
                     </a>
                 </div>
                 <!-- RESPUESTA ENVIDO -->
-                <div th:if="${mostrarRespuestasEnvidoJ2 || (leTocaResponder != null && leTocaResponder.getNumero() == 2)}">
+                <div th:if="${mostrarRespuestasEnvidoJ2 != null && mostrarRespuestasEnvidoJ2.numero.equals(2)}">
                     <a class="btn btn-primary"
                        th:href="@{/respuesta(mano=${mano.getId()}, respuesta=1, jugador=2, accion=${accionAResponder})}">Quiero
                     </a>
@@ -195,7 +194,7 @@
                 </div>
                 <!-- RESPUESTAS TRUCO -->
                 <div id="respuesta1"
-                     th:if="${mostrarRespuestasEnvidoJ2 || (leTocaResponder != null && leTocaResponder.getNumero() == 2)}">
+                     th:if="${mostrarRespuestasTrucoJ2 != null && mostrarRespuestasTrucoJ2.numero.equals(2)}">
                     <!-- NUEVA LÓGICA -->
                     <a class="btn btn-primary"
                        th:href="@{/respuesta(mano=${mano.getId()}, respuesta=1, jugador=2, accion=${accionAResponder})}">Quiero
