jugar en 2 navegadoer pt1

--- a/src/main/webapp/resources/core/css/partida-truco.css
+++ b/src/main/webapp/resources/core/css/partida-truco.css
@@ -7,8 +7,6 @@ body {
     height: 100vh;
 }
 
-
-/* HEADER */
 header {
     background-color: #333;
     color: white;
@@ -90,6 +88,21 @@ h3 {
     grid-template-rows: auto;
 }
 
+.cartasTiradasContainer {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px;
+}
+
+.misCartas, .oponenteCartas {
+    min-height: 50%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    gap: 10px;
+    justify-items: center;
+}
+
 /* GENERICOS PARA AMBOS */
 .cartasJugadorContainer {
     height: 120px !important;
@@ -122,6 +135,10 @@ h3 {
 .cartaTirada {
     width: 75px !important;
     height: 100%;
+}
+
+.cursorNegado {
+    cursor: not-allowed;
 }
 
 /* Cartas contrincante */
