--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -33,15 +33,17 @@
 
         <article id="reference">
             <a class="text-decoration-none text-white" target="_blank" rel="noopener" th:href="@{/perfil(id=${usuario.id})}">
-                <div th:if="${usuario.fotoPerfil == null || usuario.fotoPerfil.id == 1}">
+                <!-- Si el usuario no tiene foto, mostrar un ícono predeterminado -->
+                <div th:if="${usuario.urlFotoPerfil == null || usuario.urlFotoPerfil == '/img/fotos-perfil/default.png'}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#333">
                         <circle cx="12" cy="8" r="4"></circle>
                         <path d="M12 14c-4.42 0-8 2.24-8 5v1h16v-1c0-2.76-3.58-5-8-5z"></path>
                     </svg>
                 </div>
 
-                <div th:if="${usuario.fotoPerfil != null && usuario.fotoPerfil.id != 1}">
-                    <img th:src="@{'/img/fotos-perfil/' + ${usuario.fotoPerfil.imagen}}" width="24" height="24" alt="Foto de perfil">
+                <!-- Si el usuario tiene foto de perfil, mostrar la imagen -->
+                <div th:if="${usuario.urlFotoPerfil != null && usuario.urlFotoPerfil != '/img/fotos-perfil/default.png'}">
+                    <img class="foto-perfil" th:src="@{${usuario.urlFotoPerfil}}" alt="Foto de perfil">
                 </div>
             </a>
             <a href="" class="text-decoration-none text-white fs-5" target="_blank" rel="noopener">
@@ -49,7 +51,6 @@
                     <path d="M19.43 12.98c.04-.32.07-.65.07-.98s-.03-.66-.07-.98l2.11-1.65c.19-.15.24-.42.12-.64l-2-3.46c-.12-.22-.39-.3-.61-.22l-2.49 1a8.12 8.12 0 0 0-1.69-.98l-.38-2.65A.485.485 0 0 0 14 2h-4c-.25 0-.45.18-.49.42l-.38 2.65c-.62.23-1.2.54-1.69.98l-2.49-1a.494.494 0 0 0-.61.22l-2 3.46c-.12.22-.07.49.12.64l2.11 1.65c-.04.32-.07.65-.07.98s.03.66.07.98L2.62 14.63c-.19.15-.24.42-.12.64l2 3.46c.12.22.39.3.61.22l2.49-1c.49.44 1.07.75 1.69.98l.38 2.65c.04.24.24.42.49.42h4c.25 0 .45-.18.49-.42l.38-2.65c.62-.23 1.2-.54 1.69-.98l2.49 1c.23.09.5 0 .61-.22l2-3.46c.12-.22.07-.49-.12-.64l-2.11-1.65zM12 15.5c-1.93 0-3.5-1.57-3.5-3.5s1.57-3.5 3.5-3.5 3.5 1.57 3.5 3.5-1.57 3.5-3.5 3.5z"></path>
                 </svg>
             </a>
-
         </article>
     </div>
 </header>
@@ -62,7 +63,7 @@
                 <li th:each="usuario : ${usuariosSugeridos}">
                     <p style="color: black;" th:text="${usuario.nombreUsuario}"></p>
                     <i class="fab fa-github">
-                        <img th:src="@{/img/fotos-perfil/{fotoPerfil}(fotoPerfil=${usuario.urlFotoPerfil})}" alt="Foto de perfil" class="foto-perfil" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover;">
+                        <img th:src="@{${usuario.urlFotoPerfil}}" alt="Foto de perfil" class="foto-perfil" style="width: 100px; height: 100px; border-radius: 50%; object-fit: cover;">
                     </i>
                 </li>
             </ul>
