--- a/src/main/webapp/resources/core/css/home.css
+++ b/src/main/webapp/resources/core/css/home.css
@@ -19,7 +19,6 @@ p, span {
 #blurry-filter {
 	width: 100%;
 	height: 9rem;
-	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cfilter id='f'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='4' numOctaves='1'/%3E%3C/filter%3E%3Crect width='100' height='100' style='filter:url(%23f)' opacity='.2'/%3E%3C/svg%3E");
 	mask: linear-gradient(black 7rem, transparent);
 	-webkit-mask: linear-gradient(black 7rem, transparent);
 	backdrop-filter: blur(8px);
@@ -67,13 +66,13 @@ header {
 }
 
 header > div {
-	width: calc(100% - 3rem);
+	width: 100%;
 	max-width: 800px;
 	height: 100%;
 	margin: 0 auto;
 	display: flex;
 	align-items: center;
-	justify-content: space-between; /* Mantiene el espacio entre los elementos */
+	justify-content: space-between;
 	position: relative;
 }
 
@@ -98,10 +97,23 @@ header > div {
 }
 
 #title .name {
-	font-size: 2em;
+	font-size: 1.5em;
 	font-weight: bold;
 	color: #333;
 	mix-blend-mode: difference;
+}
+
+.foto-perfil {
+	width: 50px;
+	border-radius: 50%;
+	object-fit: cover;
+	overflow: hidden;
+}
+
+article svg {
+	width: 40px;
+	height: 40px;
+	margin: 0;
 }
 
 #reference {
@@ -126,8 +138,8 @@ header > div {
 /* CARROUSEL */
 :root {
 	--marquee-width: 55%;
-	--marquee-height: 20vh;
-	--marquee-elements-displayed: 5;
+	--marquee-height: 25vh;
+	--marquee-elements-displayed: 7;
 	--marquee-element-width: calc(var(--marquee-width) / var(--marquee-elements-displayed));
 	--marquee-animation-duration: calc(var(--marquee-elements) * 7s);
 }
@@ -188,7 +200,7 @@ header > div {
 	align-items: center;
 	flex-shrink: 0;
 	max-height: 100%;
-	margin: 0; /* Eliminar cualquier margen entre los elementos */
+	margin: 10px; /* Eliminar cualquier margen entre los elementos */
 }
 
 .marquee-content p {
